# Smart-Stadiums-Tournament-Operations

./: .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  render.yaml  requirements.txt
.agents/: AGENTS.md
.firebase/: hosting.ZnJvbnRlbmQ.cache
.github/workflows/: ci.yml
backend/: __init__.py
backend/api/: __init__.py  main.py  routes.py
backend/core/: __init__.py  auth.py  decision_engine.py  fcm.py  genai.py
backend/models/: __init__.py  schemas.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_engine.py  test_frontend.py  test_genai.py
data/: seed.json  simulate.py  simulate_tournament.py
frontend/: app.js  firebase-messaging-sw.js  index.html  style.css  vercel.json
