[project]
name = "stadiumops-ai"
version = "1.0.0"
description = "Intelligent decision-support assistant for stadium control room staff"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "D",    # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module (covered at top of each file)
    "D104",   # Missing docstring in public package (covered in __init__.py)
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "S101",   # Use of assert (needed in tests)
    "T201",   # print() usage (used in simulate.py)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
