[project]
name = "stadiumops-ai"
version = "1.0.0"
description = "Intelligent decision-support assistant for stadium control room staff"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "D",    # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = [
    "S101",   # Use of assert detected (assert is expected in tests)
    "S110",   # try-except-pass detected (fine in connection test cleanup)
    "ANN",    # Missing type annotations (not useful to type-annotate test boilerplate)
    "D",      # Missing docstring (no need for docstrings on test classes/methods)
    "E501",   # Line too long (longer lines are acceptable in test statements/payloads)
    "E402",   # Module level import not at top of file (needed for dynamic patching)
    "B017",   # Blind exception assert (BaseException in tests)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]

